# django-quill-editor-sample

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/config/: backends.py  settings.py  urls.py  views.py
app/config/settings/: base.py  dev.py  production.py
app/posts/: views.py
app/posts/migrations/: 0002_auto_20200615_0908.py
app/templates/: base.html  index.html
app/templates/admin/: login.html
