[tool.poetry]
name = "django-quill-editor-sample"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
django-quill-editor = "^0.1.10"
django-extensions = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
